[fix](ABC-1492): Visual picker - Size responsive creates a vertical overflow

--- a/src/modules/base/visualPicker/visualPicker.css
+++ b/src/modules/base/visualPicker/visualPicker.css
@@ -452,7 +452,6 @@
 
 /*-- responsive --*/
 .avonni-visual-picker_responsive {
-    height: 100%;
     min-height: 15rem;
     max-height: 21rem;
     width: 100%;
